force-app/main/default/objects/nFUSE__Plugin_Constants__mdt/nFUSE__Plugin_Constants__mdt.object-meta.xml
<CustomObject>
    <description>This object houses additional nFUSE Integration plug-in configuration.</description>
    <label>Plugin Constant</label>
    <pluralLabel>Plugin Constants</pluralLabel>
</CustomObject>