force-app/main/default/objects/nFUSE__Plugin_Constants__mdt/fields/nFUSE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Description__c</fullName>
    <description>Descriptions of the key and the ramification of the value</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>