force-app/main/default/objects/nFUSE__Plugin_Constants__mdt/fields/nFUSE__Is_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Is_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deactivated</label>
    <type>Checkbox</type>
</CustomField>