force-app/main/default/objects/nFUSE__Plugin_Constants__mdt/fields/nFUSE__Value__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Value__c</fullName>
    <description>The value(s) of the constant; values are separated by | (pipe)</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>